fixed a bug and cleaned up the directiories

--- a/code_files/ui/ui_MainMenu.ui
+++ b/code_files/ui/ui_MainMenu.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>MainMenu</class>
+ <widget class="QMainWindow" name="MainMenu">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,13 +11,13 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Main Menu</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QMenuBar" name="menubar">
+  <widget class="QMenuBar" name="menu">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -26,7 +26,7 @@
      <height>20</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuMenu">
+   <widget class="QMenu" name="Options">
     <property name="title">
      <string>Menu</string>
     </property>
@@ -34,7 +34,7 @@
     <addaction name="action_Collage"/>
     <addaction name="action_Edit_photos"/>
    </widget>
-   <addaction name="menuMenu"/>
+   <addaction name="Options"/>
   </widget>
   <action name="action_Open">
    <property name="text">
